tests/spec/emit/snapshots/slice_string_join.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(items: Slice<string>) -> string {
    items.join(", ")
  }
---
package main

import "strings"

func test(items []string) string {
	return strings.Join(items, ", ")
}
