tests/spec/emit/snapshots/slice_string_map_filter_join.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(items: Slice<string>) -> string {
    items
      .map(|s| s + "!")
      .filter(|s| s.length() > 2)
      .join(", ")
  }
---
package main

import "strings"

func test(items []string) string {
	result := make([]string, len(items))
	for i, s := range items {
		result[i] = s + "!"
	}
	var result_1 []string
	for _, s := range result {
		if len(s) > 2 {
			result_1 = append(result_1, s)
		}
	}
	return strings.Join(result_1, ", ")
}
