tests/spec/emit/snapshots/some_call_into_nullable_go_parameter_passes_the_value.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:net/http"
  import "go:strings"
  
  fn main() {
    let req = http.NewRequest("POST", "https://example.com", Some(strings.NewReader("hello")))
    fmt.Println(req.is_ok())
  }
---
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"net/http"
	"strings"
)

func main() {
	ret, ret_1 := http.NewRequest("POST", "https://example.com", strings.NewReader("hello"))
	var req lisette.Result[*http.Request, error]
	if ret_1 != nil {
		req = lisette.MakeResultErr[*http.Request, error](ret_1)
	} else if ret == nil {
		req = lisette.MakeResultErr[*http.Request, error](errors.New("unexpected nil"))
	} else {
		req = lisette.MakeResultOk[*http.Request, error](ret)
	}
	fmt.Println(req.IsOk())
}
