tests/spec/emit/snapshots/some_unit_value.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> Option<()> {
    Some(())
  }
---
package main

func test() (struct{}, bool) {
	return struct{}{}, true
}
