tests/spec/emit/snapshots/specialized_impl_builtin_type_string.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Wrapper<T> {\n  value: T,\n}\n\nimpl Wrapper<string> {\n  fn greet(self) -> string {\n    \"hello\"\n  }\n}\n\nfn test() -> string {\n  let w = Wrapper { value: \"world\" };\n  w.greet()\n}\n"
---
package main

type Wrapper[T any] struct {
	value T
}

func Wrapper_greet(_ Wrapper[string]) string {
	return "hello"
}

func test() string {
	w := Wrapper[string]{value: "world"}
	return Wrapper_greet(w)
}
