tests/spec/emit/snapshots/specialized_impl_explicit_type_args.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Box<T> { value: T }
  
  impl Box<int> {
    fn keep<U>(self, x: U) -> U { x }
  }
  
  fn test() -> string {
    let b = Box { value: 1 };
    b.keep<string>("ok")
  }
---
package main

type Box[T any] struct {
	value T
}

func Box_keep[U any](_ Box[int], x U) U {
	return x
}

func test() string {
	b := Box[int]{value: 1}
	return Box_keep[string](b, "ok")
}
